dev: fix text selection on firefox

--- a/packages/typst.ts/examples/typst.ts.css
+++ b/packages/typst.ts/examples/typst.ts.css
@@ -109,12 +109,12 @@ body {
 }
 .tsel span::-moz-selection,
 .tsel::-moz-selection {
-  color: transpaent;
+  color: transparent;
   background: #7db9dea0;
 }
 .tsel span::selection,
 .tsel::selection {
-  color: transpaent;
+  color: transparent;
   background: #7db9dea0;
 }
 svg {
